// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toContainAnyValues fails when given object contains value 1`] = `
"expect(received).not.toContainAnyValues(expected)

Expected object to not contain any of the following values:
  [\\"baz\\"]
Received:
  {\\"a\\": \\"foo\\", \\"b\\": \\"bar\\", \\"c\\": \\"baz\\"}"
`;

exports[`.not.toContainAnyValues fails when given object contains value 2`] = `
"expect(received).not.toContainAnyValues(expected)

Expected object to not contain any of the following values:
  [\\"foo\\", \\"bar\\"]
Received:
  {\\"a\\": \\"foo\\", \\"b\\": \\"bar\\", \\"c\\": \\"baz\\"}"
`;

exports[`.toContainAnyValues fails when given object does not contain value 1`] = `
"expect(received).toContainAnyValues(expected)

Expected object to contain any of the following values:
  [\\"fax\\"]
Received:
  {\\"a\\": \\"foo\\", \\"b\\": \\"bar\\", \\"c\\": \\"baz\\"}"
`;

exports[`.toContainAnyValues fails when given object does not contain value 2`] = `
"expect(received).toContainAnyValues(expected)

Expected object to contain any of the following values:
  [\\"fax\\", \\"rom\\"]
Received:
  {\\"a\\": \\"foo\\", \\"b\\": \\"bar\\", \\"c\\": \\"baz\\"}"
`;

exports[`.toContainAnyValues fails when given object does not contain value 3`] = `
"expect(received).toContainAnyValues(expected)

Expected object to contain any of the following values:
  [\\"dae\\", \\"mur\\", \\"zoe\\"]
Received:
  {\\"a\\": \\"foo\\", \\"b\\": \\"bar\\", \\"c\\": \\"baz\\"}"
`;
